--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,14 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+* {
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
-.nav-container{
+.nav-container {
   display: flex;
-  padding: 15px 80px;
+  padding: 12px 80px;
   justify-content: space-between;
   background-color: #909090;
   position: fixed;
@@ -13,12 +16,12 @@
   cursor: pointer;
 }
 
-.items{
+.items {
   display: flex;
   list-style: none;
 }
 
-.item{
+.item {
   font-size: 22px;
   font-weight: 600;
   padding: 5px;
@@ -26,10 +29,16 @@
   color: #fff;
 }
 
-.banner-container{
+.item:hover {
+  background-color: #F94C30;
+  transition: all 1s;
+  border-radius: 10px;
+}
+
+.banner-container {
   width: 100%;
   height: 100vh;
-  background-image: url(../asset/image/banner.jpg), linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9));
+  background-image: url(../asset/image/banner.jpg), linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
   background-size: cover;
   background-blend-mode: overlay;
   display: flex;
@@ -39,35 +48,325 @@
   color: #fff;
 }
 
-.banner-details{
-  margin-top: 150px;
+.banner-details {
+  margin-top: 100px;
 }
 
-.banner-title{
+.banner-title {
   font-size: 85px;
   font-weight: 700;
 }
 
-.primary-color{
+.primary-color {
   color: #F94C30;
 }
 
-.p-desc{
+.p-desc {
   font-size: 22px;
   width: 50%;
   margin: auto;
   padding: 10px;
 }
 
-.btn{
-  padding: 15px 25px;
+.btn {
+  padding: 12px 20px;
   border: none;
-  font-size: 18px;
+  font-size: 17px;
   margin: 5px;
   cursor: pointer;
+  border-radius: 5px;
 }
 
-.btn-discover{
+.btn-discover {
   background-color: #F94C30;
   color: #fff;
+}
+
+.service-container {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../asset/image/footer-bg.png), linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9));
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: overlay;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.service-left {
+  width: 50%;
+}
+
+.service-btn {
+  border-radius: 25px;
+  color: #909090;
+}
+
+.service-title {
+  font-size: 40px;
+}
+
+.service-desc {
+  font-size: 20px;
+  line-height: 26px;
+  width: 80%;
+  padding: 10px;
+}
+
+.list-items {
+  list-style-type: decimal;
+  padding: 20px 25px;
+}
+
+.list-item {
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.author-details {
+  display: flex;
+  align-items: center;
+}
+
+.author-img-desc {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+.author-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+
+.author-name {
+  padding: 10px;
+}
+
+.more-details-btn {
+  border-left: 2px solid #F94c30;
+  margin-left: 50px;
+}
+
+.details-btn {
+  border-radius: 25px;
+
+}
+
+.service {
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 4px 4px 8px #909090;
+  width: 220px;
+  height: 220px;
+  text-align: center;
+  color: #000;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.service-logo {
+  width: 50%;
+  padding-bottom: 10px;
+}
+
+.service-up {
+  display: flex;
+}
+
+.service-down {
+  display: flex;
+}
+
+.appointment-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 75%;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #F94C30;
+  color: #fff;
+  border-radius: 10px;
+  margin-top: -20px;
+  height: 20vh;
+}
+
+.call-icon {
+  color: #fff;
+  font-size: 50px;
+  text-align: center;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
+.phone {
+  margin-top: 20px;
+  margin-left: 5px;
+}
+
+.phone p {
+  font-size: 13px;
+  margin-bottom: 8px;
+}
+
+.phone h3 {}
+
+.call {
+  display: flex;
+  width: 25%;
+}
+
+.appointment-desc {
+  width: 40%;
+}
+
+.appointment-btn {
+  width: 20%;
+}
+
+.app-btn {
+  border-radius: 30px;
+  font-size: 18px;
+}
+
+.blog-container {
+  padding: 50px 60px;
+  margin-top: 50px;
+}
+
+.blog-container-title {
+  text-align: center;
+}
+
+.blog-container-title h1 {
+  font-weight: 900;
+  font-size: 50px;
+}
+
+.blog-container-title p {
+  font-size: 20px;
+  padding: 20px 250px;
+}
+
+.blogs {
+  display: flex;
+  justify-content: space-around;
+}
+
+.blog-post {
+  padding: 0px 10px;
+  height: 450px;
+  box-shadow: 4px 4px 4px 4px rgb(221, 221, 221);
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.blog-post img {
+  width: 100%;
+}
+
+.blog-post h3 {
+  color: #363535;
+  font-size: 28px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.blog-post p {
+  font-size: 18px;
+}
+
+.footer-container {
+    width: 100%;
+    height: 70vh;
+    background-image: url(../asset/image/footer-bg.png), linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9));
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
+    color: #fff;
+}
+
+.footer-items{
+  display: flex;
+  padding: 70px 100px;
+  justify-content: space-around;
+}
+
+.div1{
+  width: 25%;
+}
+
+.div1 p{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  line-height: 28px;
+}
+
+.footer-icons{
+  
+}
+
+.icon{
+  color: #fff;
+  margin-right: 10px;
+  font-size: 22px;
+}
+
+.div2 ul{
+  list-style-type: none;
+  margin-top: 40px;
+}
+
+.div2 ul li{
+  margin-bottom: 10px;
+}
+
+.div2 ul a{
+  text-decoration: none;
+  color: #fff; 
+}
+
+.div3 ul{
+  list-style-type: none;
+  margin-top: 40px;
+}
+
+.div3 ul li{
+  margin-bottom: 10px;
+}
+
+.div3 ul a{
+  text-decoration: none;
+  color: #fff; 
+}
+
+.div4 h3{
+  margin-bottom: 40px;
+}
+
+.div4-subheading{
+  margin-bottom: 10px;
+}
+
+.icon-text{
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.icon-text p{
+  margin-left: 10px;
+}
+
+.footer-container hr{
+  margin: 0px 130px;
+  margin-bottom: 20px;
+}
+
+.copyright-text{
+  text-align: center;
 }
